--- a/blog/style.css
+++ b/blog/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000000;
+    background-color: #1c1b22;
     color: #ffffff;
     line-height: 1.5;
 }
@@ -7,18 +7,16 @@ body {
 header,
 h1 {
     margin-top: 100px;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 
 header,
 h1,
-h2,
-h3 {
+h2 {
     text-align: center;
 }
 
-h2,
-h3 {
+h2 {
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -29,7 +27,7 @@ a {
 
 p {
     font-size: large;
-    justify-content: center;
+    text-align: justify;
     max-width: 600px;
     width: 90vw;
     display: block;
