--- a/blog/styles/style.css
+++ b/blog/styles/style.css
@@ -21,33 +21,29 @@ h2 {
     margin-bottom: 50px;
 }
 
+h3 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 a {
     color: #00ff00;
 }
 
-p,
-.support,
-ol {
+p {
     font-size: large;
-    text-align: justify;
     max-width: 600px;
-    width: 90vw;
+    /* width: 90vw; */
     display: block;
-    margin: 0 auto;
 }
 
 img {
-
     display: block;
     margin: 40px auto;
-    max-width: 800px;
+    max-width: 500px;
     width: 95vw;
 }
 
-.support,
-.articles {
-    overflow-x: scroll;
-}
 
 @media screen and (min-width: 480px) {
     body {
