add descriptions for SearXNG and Piped in the projects section; update CSS for list item spacing

--- a/blog/styles/style.css
+++ b/blog/styles/style.css
@@ -45,6 +45,10 @@ img {
 }
 
 
+li {
+    margin-bottom: 10px;
+}
+
 @media screen and (min-width: 480px) {
     body {
         margin-left: 150px;
