--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ p {
     overflow-x: scroll;
 }
 
+li {
+    margin-bottom: 10px;
+}
+
 @media screen and (min-width: 480px) {
     body {
         margin-left: 150px;
