--- a/style.css
+++ b/style.css
@@ -32,6 +32,19 @@ p {
     overflow-x: scroll;
 }
 
+
+.nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    list-style-type: square;
+    gap: 50px;
+}
+
+
+
+
 li {
     margin-bottom: 10px;
 }
